@@ -1,3 +1,7 @@
+2011-05-05    <zag@manzanillo>
+
+	* bl/vl/app/importer/plate_well.py (Recorder): Added prefetching support.
+
 2011-05-03    <zag@manzanillo>
 
 	* bl/vl/app/importer/individual.py (Recorder.record): clean up.
